Saved Jupyter notebook 'notebook editor for compute_document_statistics'

--- a/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_document_statistics.ipynb
@@ -63,6 +63,24 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "import pandas as pd\nimport numpy as np\nimport textstat\nfrom collections import Counter\n\n# Function to compute text statistics\ndef compute_text_stats(text):\n    num_chars \u003d len(text)\n    num_words \u003d len(text.split())\n    num_sentences \u003d textstat.sentence_count(text)\n    num_paragraphs \u003d text.count(\u0027\\n\u0027) + 1\n    \n    num_uppercase \u003d sum(1 for c in text if c.isupper())\n    num_lowercase \u003d sum(1 for c in text if c.islower())\n    num_digits \u003d sum(1 for c in text if c.isdigit())\n    num_punctuation \u003d sum(1 for c in text if c in \u0027.,;:!?\u0027)\n    \n    avg_word_length \u003d np.mean([len(word) for word in text.split()]) if num_words \u003e 0 else 0\n    lexical_diversity \u003d len(set(text.split())) / num_words if num_words \u003e 0 else 0\n    readability \u003d textstat.flesch_kincaid_grade(text)\n    \n    words \u003d text.split()\n    unique_words \u003d set(words)\n    num_unique_words \u003d len(unique_words)\n    longest_word \u003d max(words, key\u003dlen) if words else \"\"\n    shortest_word \u003d min(words, key\u003dlen) if words else \"\"\n    most_common_word \u003d Counter(words).most_common(1)[0][0] if words else \"\"\n\n    return pd.Series({\n        \"num_chars\": num_chars,\n        \"num_words\": num_words,\n        \"num_sentences\": num_sentences,\n        \"num_paragraphs\": num_paragraphs,\n        \n        \"num_uppercase\": num_uppercase,\n        \"num_lowercase\": num_lowercase,\n        \"num_digits\": num_digits,\n        \"num_punctuation\": num_punctuation,\n        \n        \"avg_word_length\": avg_word_length,\n        \"lexical_diversity\": lexical_diversity,\n        \"readability\": readability,\n        \n        \"num_unique_words\": num_unique_words,\n        \"longest_word\": longest_word,\n        \"shortest_word\": shortest_word,\n        \"most_common_word\": most_common_word\n    })\n\n# Load text data from the folder\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ndata \u003d []\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        text \u003d f.read().decode(\u0027utf-8\u0027)\n        stats \u003d compute_text_stats(text)\n        stats[\"file_path\"] \u003d file_path\n        data.append(stats)\n\n# Convert to DataFrame\ndf_stats \u003d pd.DataFrame(data)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "df_stats"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         "# Write recipe outputs\ndocument_statistics \u003d dataiku.Dataset(\"document_statistics\")\ndocument_statistics.write_with_schema(df_stats)"
       ],
       "outputs": []
