Saved Jupyter notebook 'notebook editor for compute_strings_statistics'

--- a/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
@@ -44,7 +44,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Function to compute string statistics\ndef compute_string_stats(text):\n    num_uppercase \u003d sum(1 for c in text if c.isupper())\n    num_lowercase \u003d sum(1 for c in text if c.islower())\n    num_digits \u003d sum(1 for c in text if c.isdigit())\n    num_punctuation \u003d sum(1 for c in text if c in \u0027.,;:!?\u0027)\n\n    return pd.Series({\n        \"num_uppercase\": num_uppercase,\n        \"num_lowercase\": num_lowercase,\n        \"num_digits\": num_digits,\n        \"num_punctuation\": num_punctuation\n    })\n\n# Load text data from the folder\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ndata \u003d []\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        text \u003d f.read().decode(\u0027utf-8\u0027)\n        stats \u003d compute_string_stats(text)\n        stats[\"file_path\"] \u003d file_path\n        data.append(stats)\n\n# Convert to DataFrame\ndf_string_stats \u003d pd.DataFrame(data)"
+        "import dataiku\nimport pandas as pd\nfrom collections import Counter\n\n# Read recipe inputs\nA220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n\n# Function to split text into strings and compute occurrences\ndef compute_string_frequencies(text, document_id):\n    words \u003d text.split()\n    word_counts \u003d Counter(words)\n    data \u003d [{\"document_id\": document_id, \"string\": word, \"frequency\": count} for word, count in word_counts.items()]\n    return data\n\n# Initialize an empty list to store the data\ndata \u003d []\n\n# Get the list of file paths in the folder\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\n\n# Iterate over each file path\nfor document_id, file_path in enumerate(file_paths, start\u003d1):\n    # Read the content of the file\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        text \u003d f.read().decode(\u0027utf-8\u0027)\n        # Compute string frequencies\n        file_data \u003d compute_string_frequencies(text, document_id)\n        # Append the data to the list\n        data.extend(file_data)\n\n# Convert the data to a DataFrame\ndf_string_stats \u003d pd.DataFrame(data)\n\n# Display the DataFrame\nprint(df_string_stats)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "df_string_stats"
       ],
       "outputs": []
     },
