--- a/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
+++ b/ipython_notebooks/notebook editor for compute_strings_statistics.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
+    "modifiedBy": "ludovic.bocken@cgi.com",
     "associatedRecipe": "compute_strings_statistics",
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738594642867,
     "customFields": {},
     "tags": [
       "recipe-editor"
-    ],
-    "modifiedBy": "ludovic.bocken@cgi.com"
+    ]
   },
   "nbformat": 4,
   "nbformat_minor": 1,
