--- a/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
@@ -1,48 +1,43 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
   "metadata": {
     "kernelspec": {
+      "name": "py-dku-venv-markitdown",
       "display_name": "Python (env markitdown)",
-      "language": "python",
-      "name": "py-dku-venv-markitdown"
+      "language": "python"
+    },
+    "hide_input": false,
+    "language_info": {
+      "name": "python",
+      "version": "3.11.11",
+      "mimetype": "text/x-python",
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "pygments_lexer": "ipython3",
+      "nbconvert_exporter": "python",
+      "file_extension": ".py"
     },
     "associatedRecipe": "compute_corpus_strings_statistics_with_pareto",
     "creator": "ludovic.bocken@cgi.com",
     "createdOn": 1738598298893,
+    "customFields": {},
     "tags": [
       "recipe-editor"
     ],
-    "customFields": {}
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
+  "nbformat": 4,
+  "nbformat_minor": 1,
   "cells": [
     {
+      "execution_count": 0,
       "cell_type": "code",
       "metadata": {},
-      "outputs": [],
-      "execution_count": 0,
       "source": [
-        "# -*- coding: utf-8 -*-\n",
-        "import dataiku\n",
-        "import pandas as pd, numpy as np\n",
-        "from dataiku import pandasutils as pdu\n",
-        "\n",
-        "# Read recipe inputs\n",
-        "A220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\n",
-        "A220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n",
-        "\n",
-        "\n",
-        "# Compute recipe outputs\n",
-        "# TODO: Write here your actual code that computes the outputs\n",
-        "# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n",
-        "\n",
-        "corpus_strings_statistics_with_pareto_df \u003d ... # Compute a Pandas dataframe to write into corpus_strings_statistics_with_pareto\n",
-        "\n",
-        "\n",
-        "# Write recipe outputs\n",
-        "corpus_strings_statistics_with_pareto \u003d dataiku.Dataset(\"corpus_strings_statistics_with_pareto\")\n",
-        "corpus_strings_statistics_with_pareto.write_with_schema(corpus_strings_statistics_with_pareto_df)"
-      ]
+        "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd, numpy as np\nfrom dataiku import pandasutils as pdu\n\n# Read recipe inputs\nA220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n\n\n# Compute recipe outputs\n# TODO: Write here your actual code that computes the outputs\n# NB: DSS supports several kinds of APIs for reading and writing data. Please see doc.\n\ncorpus_strings_statistics_with_pareto_df \u003d ... # Compute a Pandas dataframe to write into corpus_strings_statistics_with_pareto\n\n\n# Write recipe outputs\ncorpus_strings_statistics_with_pareto \u003d dataiku.Dataset(\"corpus_strings_statistics_with_pareto\")\ncorpus_strings_statistics_with_pareto.write_with_schema(corpus_strings_statistics_with_pareto_df)"
+      ],
+      "outputs": []
     }
   ]
 }
