Saved Jupyter notebook 'notebook editor for compute_corpus_strings_statistics_with_pareto'

--- a/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
+++ b/ipython_notebooks/notebook editor for compute_corpus_strings_statistics_with_pareto.ipynb
@@ -53,7 +53,25 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Assuming we have a function to read the corpus from the folder\ndef read_corpus(folder):\n    # Placeholder for actual implementation\n    # This function should return a list of strings from the corpus\n    return [\"example\", \"text\", \"for\", \"corpus\", \"example\", \"text\"]\n\ncorpus \u003d read_corpus(A220_tech_docs_text)\n\n# Compute frequency of each string in the corpus\nfrequency \u003d pd.Series(corpus).value_counts().reset_index()\nfrequency.columns \u003d [\u0027string\u0027, \u0027frequency\u0027]\n\n# Calculate relative frequency\ntotal_count \u003d frequency[\u0027frequency\u0027].sum()\nfrequency[\u0027relative_frequency\u0027] \u003d frequency[\u0027frequency\u0027] / total_count\n\n# Rank the strings by frequency\nfrequency[\u0027rank\u0027] \u003d frequency[\u0027frequency\u0027].rank(method\u003d\u0027min\u0027, ascending\u003dFalse)\n\n# Sort by string in ascending order before calculating cumulative sum\nfrequency \u003d frequency.sort_values(by\u003d\u0027string\u0027)\n\n# Calculate cumulative sum of frequencies\nfrequency[\u0027cumulative_sum\u0027] \u003d frequency[\u0027frequency\u0027].cumsum()\n\n# Compute recipe outputs\ncorpus_strings_statistics_with_pareto_df \u003d frequency\n\n# Write recipe outputs\ncorpus_strings_statistics_with_pareto \u003d dataiku.Dataset(\"corpus_strings_statistics_with_pareto\")\ncorpus_strings_statistics_with_pareto.write_with_schema(corpus_strings_statistics_with_pareto_df)\n"
+        "# Assuming we have a function to read the corpus from the folder\ndef read_corpus(folder):\n    # Placeholder for actual implementation\n    # This function should return a list of strings from the corpus\n    return [\"example\", \"text\", \"for\", \"corpus\", \"example\", \"text\"]\n\ncorpus \u003d read_corpus(A220_tech_docs_text)\n\n# Compute frequency of each string in the corpus\nfrequency \u003d pd.Series(corpus).value_counts().reset_index()\nfrequency.columns \u003d [\u0027string\u0027, \u0027frequency\u0027]\n\n# Calculate relative frequency\ntotal_count \u003d frequency[\u0027frequency\u0027].sum()\nfrequency[\u0027relative_frequency\u0027] \u003d frequency[\u0027frequency\u0027] / total_count\n\n# Rank the strings by frequency\nfrequency[\u0027rank\u0027] \u003d frequency[\u0027frequency\u0027].rank(method\u003d\u0027min\u0027, ascending\u003dFalse)\n\n# Sort by string in ascending order before calculating cumulative sum\nfrequency \u003d frequency.sort_values(by\u003d\u0027string\u0027)\n\n# Calculate cumulative sum of frequencies\nfrequency[\u0027cumulative_sum\u0027] \u003d frequency[\u0027frequency\u0027].cumsum()\n\n# Compute recipe outputs\ncorpus_strings_statistics_with_pareto_df \u003d frequency\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "corpus_strings_statistics_with_pareto_df"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "\n# Write recipe outputs\ncorpus_strings_statistics_with_pareto \u003d dataiku.Dataset(\"corpus_strings_statistics_with_pareto\")\ncorpus_strings_statistics_with_pareto.write_with_schema(corpus_strings_statistics_with_pareto_df)\n"
       ],
       "outputs": []
     }
