Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "sentences_df"
+        "sentences_df[\"sentence\"].split(\"\\n\")"
       ],
       "outputs": []
     },
