Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -53,7 +53,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "sentences_df[\"sentence\"].split(\"\\n\")"
+        "# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\nsentences_df[\u0027sentence\u0027].explode()"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "sentences_df"
       ],
       "outputs": []
     },
