--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\nsentences_df[\u0027sentence\u0027].explode()"
+        "# Splitting sentences by newline character\nsentences_df[\u0027splitted_sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\nexploded_df \u003d sentences_df.explode(\u0027splitted_sentence\u0027)"
       ],
       "outputs": []
     },
@@ -62,7 +62,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "sentences_df"
+        "exploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "exploded_df"
       ],
       "outputs": []
     },
