--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -53,7 +53,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Splitting sentences by newline character\nsentences_df[\u0027splitted_sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\nexploded_df \u003d sentences_df.explode(\u0027splitted_sentence\u0027)"
+        "# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\nexploded_df \u003d sentences_df.explode(\u0027sentence\u0027)"
       ],
       "outputs": []
     },
