Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -62,7 +62,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "exploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)"
+        "exploded_df[\u0027sentence\u0027].replace(\u0027\u0027, np.nan, inplace\u003dTrue)\nexploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)"
       ],
       "outputs": []
     },
@@ -80,7 +80,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "sentences_df[0:1].values"
+        "exploded_df[0:5].values"
       ],
       "outputs": []
     },
