Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "exploded_df"
+        "exploded_df \u003d exploded_df.drop_duplicates()\nexploded_df"
       ],
       "outputs": []
     },
