Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -71,6 +71,24 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "import spacy\n\n# Install the spaCy model\nimport subprocess\nsubprocess.run([\"python\", \"-m\", \"spacy\", \"download\", \"en_core_web_sm\"])"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import subprocess\n\n# Install spaCy\nsubprocess.run([\"pip\", \"install\", \"spacy\"])\n\n# Install the spaCy model\nsubprocess.run([\"python\", \"-m\", \"spacy\", \"download\", \"en_core_web_sm\"])"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         ""
       ],
       "outputs": []
