Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -98,6 +98,15 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
+        "import spacy\nspacy.cli.download(\u0027en_core_web_sm\u0027)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
         ""
       ],
       "outputs": []
