Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -18,13 +18,13 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "associatedRecipe": "compute_sentences",
-    "creator": "ludovic.bocken@cgi.com",
-    "createdOn": 1738601047761,
-    "customFields": {},
     "tags": [
       "recipe-editor"
     ],
+    "createdOn": 1738601047761,
+    "customFields": {},
+    "associatedRecipe": "compute_sentences",
+    "creator": "ludovic.bocken@cgi.com",
     "modifiedBy": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
@@ -54,6 +54,15 @@
       "metadata": {},
       "source": [
         "# -*- coding: utf-8 -*-\nimport dataiku\nimport pandas as pd\nimport numpy as np\nfrom dataiku import pandasutils as pdu\nimport spacy\n\n# Load the spaCy model\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\n\n# Read recipe inputs\nA220_tech_docs_text \u003d dataiku.Folder(\"rhnW9xGx\")\nA220_tech_docs_text_info \u003d A220_tech_docs_text.get_info()\n\n# Assuming the folder contains text files, we can read them into a DataFrame\nimport os\n\nfile_paths \u003d A220_tech_docs_text.list_paths_in_partition()\ntexts \u003d []\n\nfor file_path in file_paths:\n    with A220_tech_docs_text.get_download_stream(file_path) as f:\n        texts.append(f.read().decode(\u0027utf-8\u0027))\n\n# Extract sentences from the texts using spaCy\nsentences \u003d []\nfor text in texts:\n    text \u003d text.replace(\"\\x0c\", \"\\n\")\n    text \u003d text.strip()\n    doc \u003d nlp(text)\n    sentences.extend([sent.text for sent in doc.sents])\n\n# Create a DataFrame from the sentences\nsentences_df \u003d pd.DataFrame({\u0027sentence\u0027: sentences})\n\n# Splitting sentences by newline character\nsentences_df[\u0027sentence\u0027] \u003d sentences_df[\u0027sentence\u0027].apply(lambda x: x.split(\u0027\\n\u0027))\n\n# Exploding the lists into separate rows\nexploded_df \u003d sentences_df.explode(\u0027sentence\u0027)\n\n# Dropping duplicates\nexploded_df \u003d exploded_df.drop_duplicates()\n\n# Stripping whitespace from each sentence\nexploded_df[\u0027sentence\u0027] \u003d exploded_df[\u0027sentence\u0027].apply(lambda x: x.strip() if isinstance(x, str) else x)\n\n# Dropping empty rows\nexploded_df[\u0027sentence\u0027].replace(\u0027\u0027, np.nan, inplace\u003dTrue)\nexploded_df \u003d exploded_df.dropna().reset_index(drop\u003dTrue)\n\nclean_sentences_df \u003d exploded_df\n\nprint(clean_sentences_df)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "clean_sentences_df"
       ],
       "outputs": []
     },
