Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import spacy\n\nnlp \u003d spacy.load(\"en_core_web_sm\")\n\ntext \u003d \"Dr. Smith went to the store. Milk bought he. She is happy.\"\n\ndoc \u003d nlp(text)\nvalid_sentences \u003d []\n\nfor sent in doc.sents:\n    # Check if sentence has a subject (nsubj) and a main verb (ROOT)\n    if any(token.dep_ \u003d\u003d \"nsubj\" for token in sent) and any(token.dep_ \u003d\u003d \"ROOT\" for token in sent):\n        valid_sentences.append(sent.text)\n\nprint(valid_sentences)"
+        "import spacy\n\nnlp \u003d spacy.load(\"en_core_web_sm\")\n\ntext \u003d \"Dr. Smith went to the store. Milk bought he. She is happy. The cat white.\"\n\ndoc \u003d nlp(text)\nvalid_sentences \u003d []\n\nfor sent in doc.sents:\n    # Check if sentence has a subject (nsubj) and a main verb (ROOT)\n    if any(token.dep_ \u003d\u003d \"nsubj\" for token in sent) and any(token.dep_ \u003d\u003d \"ROOT\" for token in sent):\n        valid_sentences.append(sent.text)\n\nprint(valid_sentences)"
       ],
       "outputs": []
     },
