--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -53,7 +53,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "import spacy\nimport pandas as pd\n\n# Load the spaCy model\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\n\n# Function to refine sentences using spaCy\ndef refine_sentences(df, column_name):\n    refined_sentences \u003d []\n    for sentence in df[column_name]:\n        doc \u003d nlp(sentence)\n        refined_sentences.extend([sent.text for sent in doc.sents])\n    return pd.DataFrame({column_name: refined_sentences})\n\n# Refine the sentences in the DataFrame\nrefined_df \u003d refine_sentences(clean_sentences_according_to_nltk_df, \u0027sentence\u0027)"
+        "import spacy\nimport pandas as pd\n\n# Load the spaCy model\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\n\n# Function to refine sentences and add POS tags\ndef refine_sentences_with_pos(df, column_name):\n    refined_sentences \u003d []\n    pos_sentences \u003d []\n    for sentence in df[column_name]:\n        doc \u003d nlp(sentence)\n        refined_sentences.extend([sent.text for sent in doc.sents])\n        pos_sentences.extend([\u0027 \u0027.join([token.pos_ for token in sent]) for sent in doc.sents])\n    return pd.DataFrame({column_name: refined_sentences, \u0027POS_sentence\u0027: pos_sentences})\n\n# Refine the sentences and add POS tags to the DataFrame\nrefined_df \u003d refine_sentences_with_pos(clean_sentences_according_to_nltk_df, \u0027sentence\u0027)"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        "import spacy\nimport pandas as pd\n\n# Load the spaCy model\nnlp \u003d spacy.load(\u0027en_core_web_sm\u0027)\n\n# Function to refine sentences and add POS tags\ndef refine_sentences_with_pos(df, column_name):\n    refined_sentences \u003d []\n    pos_sentences \u003d []\n    for sentence in df[column_name]:\n        doc \u003d nlp(sentence)\n        refined_sentences.extend([sent.text for sent in doc.sents])\n        pos_sentences.extend([\u0027 \u0027.join([token.pos_ for token in sent]) for sent in doc.sents])\n    return pd.DataFrame({column_name: refined_sentences, \u0027POS_sentence\u0027: pos_sentences})\n\n# Refine the sentences and add POS tags to the DataFrame\nrefined_df \u003d refine_sentences_with_pos(clean_sentences_according_to_nltk_df, \u0027sentence\u0027)"
       ],
       "outputs": []
     },
