Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -18,14 +18,14 @@
       "nbconvert_exporter": "python",
       "file_extension": ".py"
     },
-    "creator": "ludovic.bocken@cgi.com",
     "customFields": {},
+    "createdOn": 1738601047761,
     "tags": [
       "recipe-editor"
     ],
+    "creator": "ludovic.bocken@cgi.com",
     "associatedRecipe": "compute_sentences",
-    "modifiedBy": "ludovic.bocken@cgi.com",
-    "createdOn": 1738601047761
+    "modifiedBy": "ludovic.bocken@cgi.com"
   },
   "nbformat": 4,
   "nbformat_minor": 1,
