Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "refined_df[refined_df[\"POS_sentence\"]]"
+        "varefined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]\nrefined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]"
       ],
       "outputs": []
     },
