--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -71,7 +71,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "varefined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]\nrefined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]"
+        "valid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]\nvalid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].endswith(\"PUNCT\")]"
       ],
       "outputs": []
     },
