Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -99,7 +99,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "valid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].str.contains(\"VERB\")]\nvalid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].str.endswith(\"PUNCT\")]\n"
+        "valid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].str.contains(\"VERB\")]\nvalid_sentences_df \u003d valid_sentences_df[valid_sentences_df[\"POS_sentence\"].str.endswith(\"PUNCT\")]\n"
       ],
       "outputs": []
     },
@@ -109,15 +109,6 @@
       "metadata": {},
       "source": [
         "valid_sentences_df"
-      ],
-      "outputs": []
-    },
-    {
-      "execution_count": 0,
-      "cell_type": "code",
-      "metadata": {},
-      "source": [
-        "valid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].contains(\"VERB\")]\nvalid_sentences_df \u003d refined_df[refined_df[\"POS_sentence\"].endswith(\"PUNCT\")]"
       ],
       "outputs": []
     },
