Saved Jupyter notebook 'notebook editor for compute_sentences'

--- a/ipython_notebooks/notebook editor for compute_sentences.ipynb
+++ b/ipython_notebooks/notebook editor for compute_sentences.ipynb
@@ -117,7 +117,7 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write recipe outputs\nsentences \u003d dataiku.Dataset(\"sentences\")\nsentences.write_with_schema(refined_df)"
+        "# Write recipe outputs\nsentences \u003d dataiku.Dataset(\"sentences\")\nsentences.write_with_schema(valid_sentences_df)"
       ],
       "outputs": []
     },
@@ -126,7 +126,16 @@
       "cell_type": "code",
       "metadata": {},
       "source": [
-        "# Write in chunks to avoid memory overload\nwith sentences.get_writer() as writer:\n    chunk_size \u003d 10000  # Adjust based on your memory capacity\n    for chunk in np.array_split(refined_df, max(1, len(refined_df) // chunk_size)):\n        writer.write_dataframe(chunk)"
+        "# Write in chunks to avoid memory overload\nchunk_size \u003d 10000  # Adjust based on your memory capacity\nwith open(\u0027output.txt\u0027, \u0027w\u0027) as writer:\n    for chunk in np.array_split(valid_sentences_df, max(1, len(valid_sentences_df) // chunk_size)):\n        writer.write(\u0027\\n\u0027.join(chunk) + \u0027\\n\u0027)\n"
+      ],
+      "outputs": []
+    },
+    {
+      "execution_count": 0,
+      "cell_type": "code",
+      "metadata": {},
+      "source": [
+        ""
       ],
       "outputs": []
     }
